<resources>
    <string name="app_name">REM</string>
    <string name="title_activity_student_navigation">StudentNavigation</string>
    <string name="navigation_drawer_open_student">Open navigation drawer</string>
    <string name="navigation_drawer_close_student">Close navigation drawer</string>
    <string name="nav_header_title_student">Student Name</string>
    <string name="nav_header_subtitle_student">studentemail@gmail.com</string>
    <string name="nav_header_desc_student">Navigation header</string>
    <string name="action_settings_student">Settings</string>

    <string name="menu_home_student">Home</string>
    <string name="menu_profile_student">Profile</string>
    <string name="menu_jobs_student">Available Jobs</string>
    <string name="menu_myapplications_student">My Applications</string>
    <string name="menu_help_student">Help</string>
    <string name="menu_feedback_student">Feedback</string>
    <string name="menu_logout_student">Logout</string>

    <string name="title_activity_recruiter_navigation">RecruiterNavigation</string>
    <string name="navigation_drawer_open_recruiter">Open navigation drawer</string>
    <string name="navigation_drawer_close_recruiter">Close navigation drawer</string>
    <string name="nav_header_title_recruiter">Recruiter Name</string>
    <string name="nav_header_subtitle_recruiter">recruiteremail@gmail.com</string>
    <string name="nav_header_desc_recruiter">Navigation header</string>
    <string name="action_settings_recruiter">Settings</string>

    <string name="menu_home_recruiter">Home</string>
    <string name="menu_profile_recruiter">Profile</string>
    <string name="menu_viewjobs_recruiter">View Jobs</string>
    <string name="menu_addjobs_recruiter">Add Job</string>
    <string name="menu_help_recruiter">Help</string>
    <string name="menu_feedback_recruiter">Feedback</string>
    <string name="menu_viewapplications_recruiter">View Applications</string>
    <string name="menu_logout_recruiter">Logout</string>

    <string name="title_activity_admin_navigation">RecruiterNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin Name</string>
    <string name="nav_header_subtitle">adminemail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile_admin">Profile</string>
    <string name="menu_viewcompanies_admin">View Companies</string>
    <string name="menu_viewstudents_admin">View Students</string>
    <string name="menu_help_admin">Help</string>
    <string name="menu_viewfeedbacks_admin">View Feedbacks</string>
    <string name="menu_logout_admin">Logout</string>

    <string name="student_courses">Choose a course</string>

    <string-array name="student_courses_array">
        <item>Select a course</item>
        <item>Computer Engineering</item>
        <item>Information Technology</item>
        <item>Electrical Engineering</item>
        <item>Electronics Engineering</item>
        <item>Civil Engineering</item>
        <item>Instrumentation Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Rubber Technology</item>
    </string-array>

    <string name="recruiter_workingtype">Select Working Type</string>
    <string-array name="recruiter_workingtype_array">
        <item>Select Working Type</item>
        <item>Work From Home</item>
        <item>Workplace</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">STUDENT PLACEMENT SYSTEM

 The main objective of this Student Placement System App project is to develop an android application which manages placement activities in college makes an interactive GUI where the institute can manage details of students. The applications main aim is to unite the students and companies on a platform so that the searching of jobs will be easy for students and searching for employees will be easy for companies also.

In this application, the company or the recruiter has to register first before login is performed. Once registered you can login into the application and post the notice of job by specifying all the details, like how many vacancies and requirements are. If you incase forget your password you can change your password and login back in the module. Once you login in any module , you did not need to login everytime unless you logout from module. Similarly the students also has to register and login in the module to search the jobs that are available for them. The admin is able to monitor the students who enrolled and also the recruiters that posted their jobs.
This Student placement application is a Final year project of diploma where we are able to show creativity and the things that we learned in all the passed years of diploma.

        
Developers-
Jeet Mistry
Siddhi Patil
Gauri Mohape
Raviraj Dange
Abhishek Sawle
</string>
</resources>
