<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deletedjobs_admin"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home_recruiter" />
        <item
            android:id="@+id/nav_profile_recruiter"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile_recruiter" />
        <item
            android:id="@+id/nav_viewjobs_recruiter"
            android:icon="@drawable/ic_menu_jobs"
            android:title="@string/menu_viewjobs_recruiter" />
        <item
            android:id="@+id/nav_addjob_recruiter"
            android:icon="@drawable/ic_menu_addjobs"
            android:title="@string/menu_addjobs_recruiter" />

        <item
            android:id="@+id/nav_viewapplications_recruiter"
            android:icon="@drawable/ic_menu_application"
            android:title="@string/menu_viewapplications_recruiter" />
        <item
            android:id="@+id/nav_logout_recruiter"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout_recruiter" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help_recruiter"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help_recruiter" />
            <item
                android:id="@+id/nav_feedback_recruiter"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_feedback_recruiter" />
        </menu>
    </item>

</menu>
