<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_student">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_student"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home_student" />
        <item
            android:id="@+id/nav_profile_student"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile_student" />
        <item
            android:id="@+id/nav_jobs_student"
            android:icon="@drawable/ic_menu_jobs"
            android:title="@string/menu_jobs_student" />
        <item
            android:id="@+id/nav_myapplications_student"
            android:icon="@drawable/ic_menu_application"
            android:title="@string/menu_myapplications_student" />
        <item
            android:id="@+id/nav_logout_student"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout_student" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help_student"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help_student" />
            <item
                android:id="@+id/nav_feedback_student"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_feedback_student" />

        </menu>
    </item>

</menu>
