<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_student"
    app:startDestination="@+id/nav_home_student">

    <fragment
        android:id="@+id/nav_home_student"
        android:name="com.example.rem.ui_student.home_student.HomeFragmentStudent"
        android:label="@string/menu_home_student"
        tools:layout="@layout/fragment_home_student" />

    <fragment
        android:id="@+id/nav_profile_student"
        android:name="com.example.rem.ui_student.profile_student.ProfileFragmentStudent"
        android:label="@string/menu_profile_student"
        tools:layout="@layout/fragment_profile_student" />

    <fragment
        android:id="@+id/nav_jobs_student"
        android:name="com.example.rem.ui_student.jobs_student.JobsFragmentStudent"
        android:label="@string/menu_jobs_student"
        tools:layout="@layout/fragment_jobs_student" />

    <fragment
        android:id="@+id/nav_myapplications_student"
        android:name="com.example.rem.ui_student.myapplications_student.MyapplicationsFragmentStudent"
        android:label="@string/menu_myapplications_student"
        tools:layout="@layout/fragment_myapplications_student" />

    <fragment
        android:id="@+id/nav_help_student"
        android:name="com.example.rem.ui_student.help_student.HelpFragmentStudent"
        android:label="@string/menu_help_student"
        tools:layout="@layout/fragment_help_student" />

    <fragment
        android:id="@+id/nav_feedback_student"
        android:name="com.example.rem.ui_student.feedback_student.FeedbackFragmentStudent"
        android:label="@string/menu_feedback_student"
        tools:layout="@layout/fragment_feedback_student" />
    <fragment
        android:id="@+id/nav_logout_student"
        android:name="com.example.rem.ui_student.logout_student.LogoutFragmentStudent"
        android:label="@string/menu_logout_student"
        />

</navigation>