<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deletedjobs_admin"
            android:icon="@drawable/ic_menu_jobs"
            android:title="@string/menu_deletedjobs_admin" />
        <item
            android:id="@+id/nav_viewcompanies_admin"
            android:icon="@drawable/ic_menu_company"
            android:title="@string/menu_viewcompanies_admin" />
        <item
            android:id="@+id/nav_viewstudents_admin"
            android:icon="@drawable/ic_menu_student"
            android:title="@string/menu_viewstudents_admin" />
        <item
            android:id="@+id/nav_logout_admin"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout_admin"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help_admin"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help_admin" />
            <item
                android:id="@+id/nav_viewfeedbacks_admin"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_viewfeedbacks_admin" />
        </menu>
    </item>

</menu>
